[package]
    name    = "majlis-kzg"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    async-trait = "0.1.66"
    bls12_381   = "0.8.0"
    blsful      = "1.1.1"
    clap        = "4.1.8"
    color-eyre  = "0.6.2"
    enquirer    = "0.6.1"
    ethers      = { version = "2.0.0", optional = true }
    hex         = "0.4.3"
    rand_chacha = "0.3.1"
    rand_core   = { version = "0.6.4", features = [ "getrandom" ] }
    rayon       = "1.7.0"
    reqwest     = { version = "0.11.14", features = [ "json" ] }
    serde       = { version = "1.0.154", features = [ "derive" ] }
    serde_json  = "1.0.94"
    thiserror   = "1.0.39"
    tokio       = { version = "1.26.0", features = [ "full" ] }
    url         = "2.3.1"

[features]
    eth = [ "ethers" ]
